Phase-3 implementation and report.

--- a/dockers/mine-python-processor/Dockerfile
+++ b/dockers/mine-python-processor/Dockerfile
@@ -1,5 +1,5 @@
 FROM python:3.12
 
-RUN pip install --upgrade pip && pip install scapy nats-py
+RUN pip install --upgrade pip && pip install scapy nats-py torch numpy
 
 WORKDIR /code/mine-python-processor
